--- a/src/components/Icon.astro
+++ b/src/components/Icon.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 
 interface Props {
-    src: string;
+    src: ImageMetadata;
     type?: "dev" | "icon";
     title: string;
 }
