--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -168,12 +168,14 @@ import { Image } from "astro:assets";
 								"I developed a programming language...",
 							link: "https://github.com/Garkatron/Rust-Lox-Interpreter",
 							image: Images.Rloxlang,
+							icons: [Icons.RustIcon],
 						},
 						{
 							title: "3D Rasterizer in Rust",
 							description: "I developed a 3D rendering engine...",
 							link: "https://github.com/Garkatron/ScrapRenderer",
 							image: Images.Renderer3D,
+							icons: [Icons.RustIcon],
 						},
 						{
 							title: "Rust-Coded LRU",
@@ -181,6 +183,7 @@ import { Image } from "astro:assets";
 								"I implemented an LRU Cache in Rust...",
 							link: "https://github.com/Garkatron/LRU-Cache-Rust",
 							image: Images.Lrucache,
+							icons: [Icons.RustIcon],
 						},
 					]}
 				/>
@@ -195,11 +198,13 @@ import { Image } from "astro:assets";
 							image: Images.Chip8,
 							description:
 								"CHIP-8 Emulator implemented in Python",
+							icons: [Icons.PythonIcon],
 						},
 						{
 							title: "TerraX69",
 							href: "https://github.com/Garkatron/TerraX69-JS",
 							description: "JavaScript game built with Tauri",
+							icons: [Icons.JsIcon],
 						},
 						{
 							title: "PC Pokémon Web",
@@ -207,6 +212,7 @@ import { Image } from "astro:assets";
 							image: Images.PokeApi,
 							description:
 								"An interactive web app for exploring Pokémon data using the PokéAPI",
+							icons: [Icons.JsIcon],
 						},
 						{
 							title: "Von Neumann Simulator",
@@ -214,18 +220,21 @@ import { Image } from "astro:assets";
 							image: Images.VonNeumann,
 							description:
 								"Von Neumann architecture simulator in Python",
+							icons: [Icons.PythonIcon],
 						},
 						{
 							title: "IWantToLearnX",
 							href: "https://github.com/Garkatron/IWantToLearnX",
 							description:
 								"A personal 'Build Your Own X' project to explore and learn various programming concepts",
+							icons: [Icons.GithubIcon],
 						},
 						{
 							title: "FactBoard NEM",
 							href: "https://github.com/Garkatron/FactBoard_NEM",
 							description:
 								"A Node.js and MongoDB-based app for managing and sharing publications",
+							icons: [Icons.JsIcon],
 						},
 						{
 							title: "FactBoard",
@@ -246,6 +255,7 @@ import { Image } from "astro:assets";
 							href: "https://github.com/Garkatron/BTA-PainScale",
 							description:
 								"A Minecraft mod with a dynamic difficulty system, enhanced health mechanics, and tougher enemies",
+							icons: [Icons.JavaIcon],
 						},
 						{
 							title: "BTA Guidebook",
@@ -253,6 +263,7 @@ import { Image } from "astro:assets";
 							image: Images.Guidebook,
 							description:
 								"A Markdown-based guidebook library for BTA modders with in-game editing and export features",
+							icons: [Icons.JavaIcon],
 						},
 						{
 							title: "StanleyTemperature",
@@ -260,6 +271,7 @@ import { Image } from "astro:assets";
 							image: Images.Stanley,
 							description:
 								"A temperature mod and skill system library for RPG-style gameplay in Minecraft",
+							icons: [Icons.JavaIcon],
 						},
 						{
 							title: "BTA Paperwork",
@@ -267,6 +279,7 @@ import { Image } from "astro:assets";
 							image: Images.Paperwork,
 							description:
 								"A Minecraft mod adding decorative blocks, items, and paper-based entities like cardboard boxes",
+							icons: [Icons.JavaIcon],
 						},
 						{
 							title: "BTA POVERH",
@@ -274,6 +287,7 @@ import { Image } from "astro:assets";
 							image: Images.Parkour,
 							description:
 								"A Minecraft mod introducing stamina and parkour mechanics for enhanced movement",
+							icons: [Icons.JavaIcon],
 						},
 					]}
 				/>
