--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,87 +11,73 @@ import { Image } from "astro:assets";
 
 <Default>
 	<body>
+		<!--
 		<img
 			src="https://images.unsplash.com/photo-1581299327801-faeb40ea459e?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8Zm9uZG9zJTIwYXp1bGVzfGVufDB8fDB8fHww"
 			alt=""
 			id="effect"
 		/>
+		-->
 
-		<main class="container">
+		<main class="container debug-border">
 			<div id="profile-container">
 				<Image
 					src={Images.ProfilePhoto}
 					alt="Foto de Matias"
 					class="profile-img"
 				/>
-				<section>
-					<div class="profile-content">
-						<h1>
-							Hi, I'm <span class="highlight">Matias</span>
-						</h1>
-						<h2>
-							<span class="highlight"> Web Developer</span> & <span
-								class="highlight">Minecraft Modder</span
-							>
-						</h2>
-						<p class="profile-intro">
-							<strong
-								>Passionate about Rust, compilers, creative
-								coding, and building fun projects. Always
-								learning and exploring new technologies.</strong
-							>
+				<div class="profile-content debug-border">
+					<h1>
+						Hi, I'm <span class="highlight">Matias</span>
+					</h1>
+					<h2>
+						<span class="highlight"> Web Developer</span> & <span
+							class="highlight">Minecraft Modder</span
+						>
+					</h2>
+					<div class="profile-description">
+						<p>
+							I began my programming journey during the pandemic,
+							starting with Java and exploring other languages.
+							Since then, I’ve been building projects, learning
+							new concepts, and recently completed a vocational
+							training program (GM FP) in Microinformatic Systems
+							and Communications. I am currently studying DAW (Web
+							Development).
 						</p>
-						<div class="profile-description">
-							<section>
-								<p>
-									I began my programming journey during the
-									pandemic, starting with Java and exploring
-									other languages. Since then, I’ve been
-									building projects, learning new concepts,
-									and recently completed a vocational training
-									program (GM FP) in Microinformatic Systems
-									and Communications. I am currently studying
-									DAW (Web Development).
-								</p>
-							</section>
-
-							<section>
-								<h4>Use of AI</h4>
-								<p>
-									I use AI to research, clarify concepts, and
-									handle small refactorings or optimizations.
-									It saves time on repetitive tasks, but I
-									avoid relying on it for major refactors or
-									as my main learning source.
-								</p>
-							</section>
-						</div>
-
-						<div class="profile-links">
-							<a
-								href="/Portfolio/MatiasGuliasCarrascalCV.pdf"
-								download
-								class="btn"
-							>
-								<Icons.CvIcon class="icon" /> Download CV
-							</a>
-							<a
-								href="https://github.com/Garkatron"
-								target="_blank"
-								rel="noopener noreferrer"
-								class="btn"
-							>
-								<Icons.GithubIcon class="icon" /> GitHub
-							</a>
-							<a id="email-button" href="#">
-								<Icons.MailIcon class="icon" /> masitacarg@gmail.com
-							</a>
-						</div>
+						<h4>Use of AI</h4>
+						<p>
+							I use AI to research, clarify concepts, and handle
+							small refactorings or optimizations. It saves time
+							on repetitive tasks, but I avoid relying on it for
+							major refactors or as my main learning source.
+						</p>
 					</div>
-				</section>
+
+					<div class="profile-links">
+						<a
+							href="/Portfolio/MatiasGuliasCarrascalCV.pdf"
+							download
+							class="btn"
+						>
+							<Icons.CvIcon class="icon" /> Download CV
+						</a>
+						<a
+							href="https://github.com/Garkatron"
+							target="_blank"
+							rel="noopener noreferrer"
+							class="btn"
+						>
+							<Icons.GithubIcon class="icon" /> GitHub
+						</a>
+						<a id="email-button" href="#">
+							<Icons.MailIcon class="icon" /> masitacarg@gmail.com
+						</a>
+					</div>
+				</div>
 			</div>
 
-			<section class="grid">
+			<section class="tech-grid debug-border">
 				<TechGrid
 					title="Languages"
 					skills={[
@@ -296,12 +282,39 @@ import { Image } from "astro:assets";
 	</body>
 
 	<style>
+		body {
+			position: relative;
+		}
+
+		body::before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-image: url("/Portfolio/circuit-board.svg");
+			background-repeat: repeat;
+			opacity: 0.5;
+			z-index: -1;
+		}
+
+		.debug-border {
+			border: white 2px solid;
+		}
+		.tech-grid {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-evenly;
+			padding: 10px;
+		}
 		.content-section {
 			padding: 40px;
 		}
 
 		#profile-container {
 			display: flex;
+			align-items: center;
 		}
 
 		.profile-img {
@@ -351,12 +364,14 @@ import { Image } from "astro:assets";
 			height: 100%;
 			z-index: -1;
 			opacity: 25%;
-			filter: contrast(150%) brightness(60%) blur(1px) grayscale();
+			filter: contrast(150%) brightness(100%) blur(1px) sepia();
 		}
 
 		.profile-content {
 			padding: 1rem;
+			flex: 1;
 		}
+
 		.presentation h1,
 		.presentation h3 {
 			margin-top: 0;
@@ -397,11 +412,6 @@ import { Image } from "astro:assets";
 			min-width: 80px;
 			height: 32px;
 			color: rgb(255, 255, 255);
-		}
-
-		.tech-grid {
-			display: flex;
-			gap: 0.5rem;
 		}
 	</style>
 	<script>
