--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -300,7 +300,7 @@ import { Image } from "astro:assets";
 		}
 
 		.debug-border {
-			border: white 2px solid;
+			/*border: white 2px solid; */
 		}
 		.tech-grid {
 			display: flex;
