--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import { Image } from "astro:assets";
 ---
 
 <Default>
-	<body>
+	<body class="container-fluid">
 		<!--
 		<img
 			src="https://images.unsplash.com/photo-1581299327801-faeb40ea459e?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8Zm9uZG9zJTIwYXp1bGVzfGVufDB8fDB8fHww"
@@ -345,7 +345,7 @@ import { Image } from "astro:assets";
 			mask-size: cover;
 		}
 
-		@media (max-width: 765px) {
+		@media (max-width: 800px) {
 			#profile-container {
 				display: flex;
 				flex-direction: column;
