--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,124 +1,117 @@
 ---
 import { Image } from "astro:assets";
-import Icon from "./Icon.astro";
 
 const {
-    title = "ProjectName",
-    description = "Some info here...",
-    link,
-    image,
-    icons,
+    src,
+    icons = [],
+    title = "",
+    description = "Nothing to say about it.",
 } = Astro.props;
 ---
 
-<a href={link} target="_blank" rel="noopener noreferrer" class="card">
-    {image && <Image src={image} width={0} height={0} alt="project card" />}
-    <div class="card-content">
-        <strong>{title}</strong>
-        <p>{description}</p>
-        <div class="grid">
-            {
-                icons &&
-                    icons.map((i: ImageMetadata) => (
-                        <div>
-                            <Icon type="icon" title="project_icon" src={i} />
-                        </div>
+<div class="project-container card">
+    <div class="card-inner">
+        <div class="card-front">
+            <Image
+                width={400}
+                height={400}
+                class="main-project"
+                src={src}
+                alt="Project preview"
+            />
+
+            <div class="project-icons">
+                {
+                    icons.map((icon) => (
+                        <Image
+                            width={42}
+                            height={42}
+                            src={icon.src}
+                            alt={icon.alt || "Tech icon"}
+                        />
                     ))
-            }
+                }
+            </div>
+        </div>
+        <div class="card-back has-comic-border">
+            <h5 class="title is-5">{title}</h5>
+            {description}
         </div>
     </div>
-</a>
+</div>
 
 <style>
     .card {
-        display: flex;
+        width: 200px;
+        height: 250px;
+        margin: 1rem auto;
+        perspective: 1000px;
+        cursor: pointer;
+    }
+
+    .card-inner {
         position: relative;
-        flex-direction: column;
-        align-items: center;
-        width: 800px;
-        height: 500px;
-        border-radius: 0.5rem;
-        overflow: hidden;
-        filter: grayscale();
-        transition:
-            transform 0.3s ease,
-            box-shadow 0.3s ease,
-            border-radius 0.3s ease,
-            filter 0.3s ease;
-    }
-
-    @media (max-width: 800px) {
-        .card {
-            width: 95%;
-            height: 300px;
-        }
-    }
-
-    .card:hover {
-        transform: scale(1.05);
-        border-radius: 16px;
-        z-index: 1000;
-        box-shadow:
-            0 10px 25px rgba(0, 0, 0, 0.2),
-            0 4px 50px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(5px);
-        -webkit-backdrop-filter: blur(5px);
-        filter: none;
-    }
-
-    .card img {
-        position: absolute;
-        top: 0;
-        left: 0;
         width: 100%;
         height: 100%;
-        object-fit: cover;
-        z-index: -1;
-        transition: transform 0.5s ease;
+        transition: transform 0.6s;
+        transform-style: preserve-3d;
     }
 
-    .card:hover img {
-        transform: scale(1.1);
+    .card:hover .card-inner {
+        transform: rotateY(180deg);
     }
 
-    .card-content {
+    .card-front,
+    .card-back {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 0.5rem;
+        flex-direction: column;
+    }
+
+    .card-front {
+    }
+
+    .card-back {
+        background: #4a4a4a;
+        color: white;
+        transform: rotateY(180deg);
+    }
+
+    /* */
+    .project-container {
+        position: relative;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: flex-end; /* Pushes content to the bottom */
+        flex: 1 1 0;
+        max-width: 350px;
+        min-width: 250px;
+        margin: 10px;
+    }
+
+    .project-container img.main-project {
         width: 100%;
-        padding: 1rem;
-        margin-top: auto; /* Ensures the content is pushed to the bottom of the card */
-        z-index: 1;
-        background: rgba(
-            0,
-            0,
-            0,
-            0.5
-        ); /* Optional: adds a semi-transparent background for readability */
-        color: white; /* Optional: improves text contrast against the image */
+        height: 250px;
+        object-fit: cover;
+        border-radius: 8px;
     }
 
-    strong,
-    p {
-        margin-bottom: 1rem;
-        text-align: center;
+    .project-container .project-icons {
+        position: absolute;
+        bottom: -35px;
+        right: 5px;
+        display: flex;
+        gap: 5px;
     }
 
-    a {
-        text-decoration: none;
-        text-transform: lowercase;
-        border: 1px solid var(--clr-cta);
-        color: light-dark(var(--clr-cta), white);
-        border-radius: 3px;
-        transition: 150ms ease-in-out;
-        z-index: 1;
-    }
-
-    a:hover,
-    a:focus-visible {
-        background-color: var(--clr-cta);
-        color: white;
-        outline: none;
+    .project-container .project-icons img {
+        width: 42px;
+        height: 42px;
+        cursor: pointer;
     }
 </style>
