--- a/src/components/ComicPhoto.astro
+++ b/src/components/ComicPhoto.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 
-import photo from "../assets/images/noirphoto.png";
+import photo from "../assets/images/photo.jpg";
 ---
 
 <a href="">
